Update Chinese dialog text for user interaction

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -469,7 +469,7 @@
 
     const dialogData_ZH = {
       "start": {
-        text: "你好！我是易连的守护者。由我来保护你的脑机探针。",
+        text: "你好啊！我是易连的守护者。由我来保护你的脑机探针。",
         options: [ { text: "🚀 开始探索！", next: "root_menu" } ]
       },
       "root_menu": {
@@ -629,7 +629,7 @@
         if(idleInterval) clearInterval(idleInterval);
         
         const enTips = ["Click me for guide!", "I'm here to help!"];
-        const zhTips = ["点击我答疑解惑", "有问题问我！"];
+        const zhTips = ["我是易连助手", "有问题随时问我！"];
         const tips = currentLang === 'en' ? enTips : zhTips;
         
         // 立即显示第一句
