--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,11 +5,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
    
   <title>{{ page.title }}</title>
-  <link rel="shortcut icon" type="image/x-icon" href="{{ '/Images/icon/favicon.ico' | relative_url }}">
-  <link rel="icon" type="image/png" sizes="32x32" href="{{ '/Images/icon/favicon-32x32.png' | relative_url }}">
-  <link rel="icon" type="image/png" sizes="16x16" href="{{ '/Images/icon/favicon-16x16.png' | relative_url }}">
-  <link rel="apple-touch-icon" sizes="180x180" href="{{ '/Images/icon/apple-touch-icon.png' | relative_url }}">
-  <link rel="manifest" href="{{ '/Images/icon/site.webmanifest' | relative_url }}">
+  <link rel="shortcut icon" type="image/x-icon" href="Images/icon/favicon.ico">
+  <link rel="icon" type="image/png" sizes="32x32" href="Images/icon/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="Images/icon/favicon-16x16.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="Images/icon/apple-touch-icon.png">
+  <link rel="manifest" href="Images/icon/site.webmanifest">
  
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600&family=JetBrains+Mono&display=swap" rel="stylesheet">
