--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -281,25 +281,25 @@
     <div class="modal-content">
       
       <div class="modal-title">
-        <span class="m-en">👋 Welcome!</span>
-        <span class="m-zh">👋 欢迎访问！</span>
+       <span class="m-en">✨ Hi, Welcome to E-Link!</span>
+       <span class="m-zh">✨ 哈喽！欢迎到访易连接！</span>
       </div>
       
-      <div class="modal-body">
-        <span class="m-en">
-          This website is best viewed in <b>Dark Mode</b>.<br>
-          <span style="font-size: 0.85rem; color: #94a3b8;">
-            (You can adjust settings anytime at the top-right corner)
-          </span>
-        </span>
-        <span class="m-zh">
-          本网站专为<b>深色模式</b>设计，推荐保持默认设置。<br>
-          <span style="font-size: 0.85rem; color: #94a3b8;">
-            (您随时可以在右上角切换语言和主题)
-          </span>
-        </span>
-      </div>
-
+     <div class="modal-body">
+  <span class="m-en">
+    We recommend <b>Dark Mode</b> for a more immersive experience.<br>
+    <span style="font-size: 0.85rem; color: #94a3b8; display: block; margin-top: 8px;">
+      (Feel free to tailor your view at the top-right corner.)
+    </span>
+  </span>
+  <span class="m-zh">
+    为了给您的眼睛提供最舒适的<b>深色环境</b>，推荐保留当前设置。<br>
+    <span style="font-size: 0.85rem; color: #94a3b8; display: block; margin-top: 8px;">
+      (您可随时通过右上角切换语言主题。)
+    </span>
+  </span>
+</div>
+     
       <div class="modal-btns">
         <button id="modal-keep-dark-btn" class="btn-primary">
           <span class="m-en">🌑 Keep Dark Mode</span>
