Update dark mode suggestion text in default layout

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -293,7 +293,7 @@
     </span>
   </span>
   <span class="m-zh">
-    建议保留<b>深色模式</b>，以获得更佳的视觉效果 <br>
+   “为呈现最佳视觉体验，建议开启<b>深色模式</b> <br>
     <span style="font-size: 0.85rem; color: #94a3b8; display: block; margin-top: 8px;">
       (您可随时通过右上角切换语言主题。)
     </span>
