--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -282,7 +282,7 @@
       
       <div class="modal-title">
         <span class="m-en">✨ Hi, Welcome to E-Link!</span>
-        <span class="m-zh">✨ 哈喽！欢迎访问E-Link！</span>
+        <span class="m-zh">✨ 嗨！欢迎访问E-Link！</span>
       </div>
       
       <div class="modal-body">
